[SWOZO-35] dont assume resource is a file